Fix tabs showing on small size refresh

--- a/styles.css
+++ b/styles.css
@@ -254,6 +254,11 @@ hr{
     }
 
     .container-today, .container-entries {
+        width: 100%;
         border: none;
+    }
+
+    .container-entries {
+        display: none;
     }
   }
